  in the text field
- CS+DOWN (select next paragraph) didn't work properly

+ API Changes

- SearchAndReplace.showSearchDialog() method removed. Simply create a
  new SearchDialog instance instead
- InputHandler.readNextChar(String code) deprecated. Use the new form
  instead:

  readNextChar(String msg, String code).

  'msg' will be shown in the status bar.

* Version 3.2pre1

+ New Features

- Pressing Caps Lock toggles multiple selection on and off. In multiple
  selection mode, any number of chunks can be selected, and the caret
  position is independent of the selection. All jEdit built-in commands
  support multiple selections. If they don't, it's a bug
- Caret registers and markers merged:
  - 'Markers' top level menu contains commands for manipulating markers.
  - Markers can no longer be named -- the menu just shows the line of
    text containing the marker, along with the line number.
  - Markers can have single-character 'shortcuts'. To add a marker with
    a shortcut, use the 'Add Marker With Shortcut' command.
  - Key strokes for dealing with markers with shortcuts are the same as
    the old register command keystrokes (C+t, C+y, C+u, C+k)
  - Unlike caret registers, which were global to the editor, markers are
    buffer-specific.
  - Registers are now only used to store text.
  - Note that adding a marker with a shortcut of an existing one does
    not delete the existing marker, it merely clears its shortcut.
  - Registers and marker shortcuts are stored in a different namespace,
    so you can have text in register 'a' and a marker with shortcut 'a'
    at the same time
- X-Windows style copy and paste now supported: most recently selected
  text is stored in the '%' register, middle mouse button click (or
  Alt-click if you only have a 2 button mouse) inserts contents of that
  register.
- New 'Copy Append' (C+e C+a), 'Cut Append' (C+e C+u) commands append
  selected text to clipboard.